// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`copyTask > given a file path > can copy it 1`] = `
---------- Context -----------
Working Directory: /ROOT/test/__fixtures__/copy-task/__temp__/__{hash}__
Command: /ROOT/nadle.mjs --max-workers 1 --no-footer copyFoo
---------- Stdout ------------
[log] <Bold><Cyan>🛠️ Welcome to Nadle {version}!</Cyan></BoldDim>
[log] Using Nadle from /ROOT/lib/index.js
[log] Loaded configuration from /ROOT/test/__fixtures__/copy-task/__temp__/__{hash}__/nadle.config.ts

[log] <Yellow>></Yellow> Task <Bold>copyFoo</BoldDim> <Yellow>STARTED</Yellow>

[log] Copy foo.txt -> dist
[log]
<Green>✓</Green> Task <Bold>copyFoo</BoldDim> <Green>DONE</Green> <Dim>{duration}</BoldDim>
[log]
<Bold><Green>RUN SUCCESSFUL</Green></BoldDim> in <Bold>{duration}</BoldDim>
[log] <Bold>1</BoldDim> task executed
`;

exports[`copyTask > given a folder path > can copy it 1`] = `
---------- Context -----------
Working Directory: /ROOT/test/__fixtures__/copy-task/__temp__/__{hash}__
Command: /ROOT/nadle.mjs --max-workers 1 --no-footer copyAssets
---------- Stdout ------------
[log] <Bold><Cyan>🛠️ Welcome to Nadle {version}!</Cyan></BoldDim>
[log] Using Nadle from /ROOT/lib/index.js
[log] Loaded configuration from /ROOT/test/__fixtures__/copy-task/__temp__/__{hash}__/nadle.config.ts

[log] <Yellow>></Yellow> Task <Bold>copyAssets</BoldDim> <Yellow>STARTED</Yellow>

[log] Copy assets/bar.txt -> dist/bar.txt
[log] Copy assets/sub/baz.txt -> dist/sub/baz.txt
[log]
<Green>✓</Green> Task <Bold>copyAssets</BoldDim> <Green>DONE</Green> <Dim>{duration}</BoldDim>
[log]
<Bold><Green>RUN SUCCESSFUL</Green></BoldDim> in <Bold>{duration}</BoldDim>
[log] <Bold>1</BoldDim> task executed
`;

exports[`copyTask > given a nested destination > creates directories automatically 1`] = `
---------- Context -----------
Working Directory: /ROOT/test/__fixtures__/copy-task/__temp__/__{hash}__
Command: /ROOT/nadle.mjs --max-workers 1 --no-footer copyToNested
---------- Stdout ------------
[log] <Bold><Cyan>🛠️ Welcome to Nadle {version}!</Cyan></BoldDim>
[log] Using Nadle from /ROOT/lib/index.js
[log] Loaded configuration from /ROOT/test/__fixtures__/copy-task/__temp__/__{hash}__/nadle.config.ts

[log] <Yellow>></Yellow> Task <Bold>copyToNested</BoldDim> <Yellow>STARTED</Yellow>

[log] Copy foo.txt -> dist/sub/nested
[log]
<Green>✓</Green> Task <Bold>copyToNested</BoldDim> <Green>DONE</Green> <Dim>{duration}</BoldDim>
[log]
<Bold><Green>RUN SUCCESSFUL</Green></BoldDim> in <Bold>{duration}</BoldDim>
[log] <Bold>1</BoldDim> task executed
`;

exports[`copyTask > with include and exclude options > copies only matching files 1`] = `
---------- Context -----------
Working Directory: /ROOT/test/__fixtures__/copy-task/__temp__/__{hash}__
Command: /ROOT/nadle.mjs --max-workers 1 --no-footer copyWithFilter
---------- Stdout ------------
[log] <Bold><Cyan>🛠️ Welcome to Nadle {version}!</Cyan></BoldDim>
[log] Using Nadle from /ROOT/lib/index.js
[log] Loaded configuration from /ROOT/test/__fixtures__/copy-task/__temp__/__{hash}__/nadle.config.ts

[log] <Yellow>></Yellow> Task <Bold>copyWithFilter</BoldDim> <Yellow>STARTED</Yellow>

[log] Copy assets/sub/baz.txt -> dist/sub/baz.txt
[log]
<Green>✓</Green> Task <Bold>copyWithFilter</BoldDim> <Green>DONE</Green> <Dim>{duration}</BoldDim>
[log]
<Bold><Green>RUN SUCCESSFUL</Green></BoldDim> in <Bold>{duration}</BoldDim>
[log] <Bold>1</BoldDim> task executed
`;

exports[`copyTask > with include and exclude options > copies only matching files 3`] = `
---------- Context -----------
Working Directory: /ROOT/test/__fixtures__/copy-task/__temp__/__{hash}__
Command: /ROOT/nadle.mjs --max-workers 1 --no-footer copyWithFilter
---------- Stdout ------------
[log] <Bold><Cyan>🛠️ Welcome to Nadle {version}!</Cyan></BoldDim>
[log] Using Nadle from /ROOT/lib/index.js
[log] Loaded configuration from /ROOT/test/__fixtures__/copy-task/__temp__/__{hash}__/nadle.config.ts

[log] <Yellow>></Yellow> Task <Bold>copyWithFilter</BoldDim> <Yellow>STARTED</Yellow>

[log] Copy assets/sub/baz.txt -> dist/sub/baz.txt
[log]
<Green>✓</Green> Task <Bold>copyWithFilter</BoldDim> <Green>DONE</Green> <Dim>{duration}</BoldDim>
[log]
<Bold><Green>RUN SUCCESSFUL</Green></BoldDim> in <Bold>{duration}</BoldDim>
[log] <Bold>1</BoldDim> task executed
`;
